# denser

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  run.py
denser/: __init__.py  cli.py  compress.py  curve.py  eval.py  precommit.py  taxonomy.py  tokens.py
denser/backends/: __init__.py  base.py  claude.py  openai_compat.py
denser/fixtures/: __init__.py
denser/fixtures/golden/claude_md/: convention_recall.json
denser/fixtures/golden/memory_entry/: recall_accuracy.json  why_preserved.json
denser/fixtures/golden/one_shot_doc/: acceptance_criteria.json  instruction_recall.json
denser/fixtures/golden/skill/: constraint_obedience.json  procedure_recall.json  trigger_accuracy.json
denser/fixtures/golden/system_prompt/: boundary_enforcement.json  role_consistency.json
denser/fixtures/golden/tool_description/: invocation_accuracy.json
denser/prompts/: __init__.py  registry.py
denser/skills/: README.md  install.ps1  install.sh
denser/skills/denser-compress/: REFERENCE_taxonomy.md
docs/: CONTRIBUTING.md  COOKBOOK.md  CROSS_MODEL_NOTES.md  LAUNCH_BLOG.md  METHODOLOGY.md  TAXONOMY.md  WHITEPAPER.md
docs/assets/: hero.py
examples/: README.md
examples/claude_md/01_monorepo/: dense.md  notes.md  verbose.md
examples/memory_entries/01_build_tool_preference/: dense.md  notes.md  verbose.md
examples/one_shot_docs/01_api_migration/: dense.md  notes.md  verbose.md
examples/skills/01_pr_review/: dense.md  notes.md  verbose.md
examples/skills/02_denser_compress_self/: dense.md  notes.md  verbose.md
examples/skills/03_luming_glm46/: dense.md  notes.md  rationale_raw.md  verbose.md
examples/system_prompts/01_code_reviewer/: dense.md  notes.md  verbose.md
examples/tool_descriptions/01_web_search/: dense.md  notes.md  verbose.md
integrations/: README.md  pre-commit-hook.ps1  pre-commit-hook.sh
scripts/: sync_skill_reference.py
tests/: test_compress.py  test_curve.py  test_eval.py  test_precommit.py  test_skill_sync.py  test_taxonomy.py
tests/integration/: README.md  test_end_to_end.py
