[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "denser"
version = "0.1.0-dev"
description = "Find the signal density sweet spot for your LLM prompts, skills, and agent configs — with empirical proof."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "BillWang" }]
requires-python = ">=3.10"
keywords = ["llm", "prompt-engineering", "compression", "agents", "claude", "anthropic", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
plot = [
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.scripts]
denser = "denser.cli:main"

[project.urls]
Homepage = "https://github.com/BillWang0101/denser"
Repository = "https://github.com/BillWang0101/denser"
Issues = "https://github.com/BillWang0101/denser/issues"
Documentation = "https://github.com/BillWang0101/denser/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["denser"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "PL"]
ignore = [
    "E501",    # line-length — handled by formatter
    "PLR0913", # too many arguments — keyword-only APIs are intentional
    "PLR2004", # magic-value-comparison — fine in tests and thresholded code
    "PLC0415", # import-not-at-top — deferred imports for optional deps are deliberate
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR", "SIM"]  # tests are allowed to be explicit

[tool.pytest.ini_options]
testpaths = ["tests"]
# `-m "not integration"` keeps CI fast/cheap; integration tests run manually
# before releases via `pytest tests/integration/ -m integration`.
addopts = "-v --strict-markers -m 'not integration'"
python_classes = ["Test*"]
markers = [
    "integration: tests that hit the real Claude API (excluded by default)",
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
